--- a/_layouts/thema.html
+++ b/_layouts/thema.html
@@ -4,6 +4,7 @@ menu_themen: yes
 
 ---
 
-<h2>{{ page.title }}</h2>
-
-{{ content }}
+<div class="top-box col-md-8 col-center">
+  <h1>{{ page.title }}</h1>
+  {{ content }}
+</div>
