--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="hidden-print">
   <div class="footer">
     <div class="container">
-      <div class="row">
-        <div class="col-md-3">
+      <div class="row row-normal">
+        <div class="col-md-3 col-xs-6">
           <h3>Themen</h3>
           <ul>
             <li><a href="#">Offene Daten</a></li>
@@ -12,7 +12,7 @@
             <li><a href="#">Civic Technology</a></li>
           </ul>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-6">
           <h3>Projekte</h3>
           <ul>
             <li><a href="#">Frag den Staat</a></li>
@@ -22,7 +22,7 @@
             <li><a href="#">Offenes Parlament</a></li>
           </ul>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-6">
           <h3>Community</h3>
           <ul>
             <li><a href="#">Code for Germany</a></li>
@@ -32,7 +32,7 @@
             <li><a href="#">Mailinglisten</a></li>
           </ul>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-6">
           <h3>Kontakt</h3>
 
         </div>
@@ -41,15 +41,15 @@
   </div>
   <div class="cellar">
     <div class="container">
-      <div class="row">
-        <div class="col-md-8">
+      <div class="row row-normal">
+        <div class="col-xs-12 col-md-8">
           <p>
             Open Knowledge Foundation Deutschland e.V. ist ein eingetragener
             Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite
             sind nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> freigegeben.
           </p>
         </div>
-        <div class="col-md-2 col-md-push-2">
+        <div class="col-md-2 col-md-offset-2 col-xs-8 col-xs-offset-4">
             <a href="{{ site.baseurl }}">
               <img src="{{site.staticurl}}images/logo_footer.png" alt="Open Knowldege Foundation Deutschland e.V.">
             </a>
