--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,8 @@ layout: default
 
 ---
 
-<div class="container">
+<div class="top-box col-md-8 col-center">
+  <h1>{{ page.title }}</h1>
+
   {{ content }}
 </div>
