--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 menu_projekte: yes
 
 ---
-<div class="top-box col-md-8 col-center">
+<div class="top-box col-center">
   <h1>{{ page.title }}</h1>
   {{ content }}
 
