Remove obsolete class

--- a/_layouts/thema.html
+++ b/_layouts/thema.html
@@ -4,7 +4,6 @@ menu_themen: yes
 
 ---
 
-<div class="top-box col-md-8 col-center">
-  <h1>{{ page.title }}</h1>
+<div class="top-box col-center">
   {{ content }}
 </div>
