Add subtitle to projects

--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -8,7 +8,7 @@
     {% endif %}
     <div class="inner">
       <h3>{{ project.title }}</h3>
-      <p>{{ project.teaser }}</p>
+      <p>{{ project.subtitle }}</p>
     </div>
   </div>
 </a>
