--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,30 @@
 ---
-layout: page
+layout: default
 
 ---
 
-{{ content }}
+{% assign author = site.data.team | where:"name",page.author | first %}
+
+<div class="top-box col-center">
+  <div class="post-author">
+    <img src="{{ site.baseurl }}static/images/team/{{ author.img }}_square.jpg" alt="{{ author.name }}" class="img-circle">
+    <p class="post-meta">
+      {% if author.name %}
+      von <a href="{{ site.baseurl }}{% if author.team %}team{% else %}vorstand{% endif %}#{{ author.name | slugify }}">{{ author.name }}</a><br/>
+      {% else %}
+      von {{ page.author }}
+      {% endif %}
+      am {{ page.date | date:"%d.%m.%Y" }}
+    </p>
+  </div>
+
+  <h1>{{ page.title }}</h1>
+
+  {% if page.image %}
+  <div class="post-image-full">
+    <img src="{{ page.image.src }}" alt="{{ page.image.title }}"/>
+  </div>
+  {% endif %}
+
+  {{ content }}
+</div>
