Give colour gradient for projects without image

--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -2,10 +2,8 @@
 
 <a class="{% if project.wideimage %}col-md-8{% else %}col-md-4{% endif %} col-sm-6 col-xs-12" href="{{ site.baseurl }}{{ project.url|replace_first:'/','' }}">
   <div class="box box-image box-{{ project.type }}">
-    {% if project.img.size > 0 %}
-      <div class="box-image-inner" style="background-image: url('{% if project.img contains 'http' %}{{ project.img }}{% else %}{{ site.staticurl }}images/{{ project.img }}{% endif %}');'">
-      </div>
-    {% endif %}
+    <div class="box-image-inner{% unless project.img.size > 0 %} box-color{% endunless %}" {% if project.img.size > 0 %}style="background-image: url('{{ site.staticurl }}images/{{ project.img }}');'"{% endif %}>
+    </div>
     <div class="inner">
       <h3>{{ project.title }}</h3>
       <p>{{ project.subtitle }}</p>
