Add caveat to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,7 +46,7 @@
           <p>
             Open Knowledge Foundation Deutschland e.V. ist ein eingetragener
             Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite
-            sind nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> freigegeben.
+            sind, sofern nicht anders angegeben, nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> lizensiert.
           </p>
         </div>
         <div class="col-md-2 col-md-offset-2 col-xs-8 col-xs-offset-4">
