--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
           <h3>Community</h3>
           <ul>
             <li><a href="#">Code for Germany</a></li>
-            <li><a href="#">Jugend Hackt</a></li>
+            <li><a href="#">Jugend hackt</a></li>
             <li><a href="#">Coding da Vinci</a></li>
             <li><a href="#">Hacks and the City</a></li>
             <li><a href="#">Mailinglisten</a></li>
