--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,9 +14,9 @@
         <li{% if page.menu_projekte %} class="active"{% endif %}>
           <a class="nav-link" href="{{ site.baseurl }}projekte/">Projekte</a>
         </li>
-        <li{% if page.menu_community %} class="active"{% endif %}>
-          <a class="nav-link" href="{{ site.baseurl }}community/">Community</a>
-        </li>
+<!--         <li{% if page.menu_community %} class="active"{% endif %}>
+  <a class="nav-link" href="{{ site.baseurl }}community/">Community</a>
+</li> -->
         <li{% if page.menu_blog %} class="active"{% endif %}>
           <a class="nav-link" href="{{ site.baseurl }}blog/">Blog</a>
         </li>
